<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pagebkg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_edittxt"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="26dp">
        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/et_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/apellido"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/et_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edad"
            android:inputType="number"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/et_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fecha_de_nacimiento"
            android:focusable="false"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guardar"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
